overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,21 @@ main .input-container .input-date {
   margin: 0;
   padding: 0;
 }
+.list-item {
+  margin-bottom: 0.5rem;
+}
 .date {
   font-size: 0.9rem;
 }
 .tasks {
   border: 1px solid #f00;
+  height: auto;
+}
+.task-out {
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  line-break: anywhere;
+  height: auto;
+  font-size: 0.9rem;
 }
